# parquet-cat

./: Cargo.toml  LICENSE  README.md
src/: file_metadata.rs  main.rs  row_printer.rs
