[package]
name = "parquet-cat"
version = "0.1.0"
authors = ["James Hall <james.hall@shopify.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
clap = "~2.33"
parquet = {git = "https://github.com/apache/arrow"}
serde_json = "1.0"
